@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-26T16:32:47Z",
-  "count_outdated" : 610,
-  "uniques_outdated" : 47,
-  "count" : 630,
+  "timestamp" : "2022-08-27T02:29:52Z",
+  "count_outdated" : 617,
+  "uniques_outdated" : 48,
+  "count" : 633,
   "uniques" : 49,
   "views" : [
-    {
-      "timestamp": "2022-08-12T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 1, 7 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-13T00:00:00Z",
       "count": 16,
