@@ -1,12 +1,7 @@
 {
-  "count": 20,
+  "count": 16,
   "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-08-12T00:00:00Z",
-      "count": 4,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-13T00:00:00Z",
       "count": 16,
